--- a/clientApp/MyFirstApiSite/wwwroot/css/homePage.css
+++ b/clientApp/MyFirstApiSite/wwwroot/css/homePage.css
@@ -30,7 +30,7 @@ h1 {
     align-items: center;
     width: 100%;
     height: 100vh;
-    background: url('images/background1.jpeg') no-repeat center top; /* Background image */
+    background: url('../images/background1.jpeg') no-repeat center top; /* Background image */
     background-size: cover;
     z-index: 1;
 }
